--- a/P3_MiniProject_Client/src/UI_Layout.form
+++ b/P3_MiniProject_Client/src/UI_Layout.form
@@ -42,24 +42,9 @@
           <text value="Blue Team"/>
         </properties>
       </component>
-      <component id="11302" class="javax.swing.JTextField" binding="guessNo_display">
-        <constraints>
-          <grid row="6" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-2171173"/>
-          <editable value="false"/>
-          <font size="20"/>
-          <foreground color="-16053493"/>
-          <horizontalAlignment value="0"/>
-          <text value="3"/>
-        </properties>
-      </component>
       <component id="14735" class="javax.swing.JTextField" binding="hint_display">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="4" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+          <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
           </grid>
         </constraints>
@@ -83,7 +68,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -98,7 +83,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -113,7 +98,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -128,7 +113,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -143,7 +128,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -158,7 +143,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -173,7 +158,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -188,7 +173,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -203,7 +188,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -218,7 +203,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
         </properties>
@@ -233,7 +218,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -249,7 +234,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -265,7 +250,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -281,7 +266,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -297,7 +282,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -313,7 +298,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -329,7 +314,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -345,7 +330,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -361,7 +346,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -377,7 +362,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -393,7 +378,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -409,7 +394,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -425,7 +410,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -441,7 +426,7 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
@@ -457,10 +442,35 @@
         </constraints>
         <properties>
           <background color="-592141"/>
-          <foreground color="-4471095"/>
+          <foreground color="-16777216"/>
           <hideActionText value="true"/>
           <horizontalTextPosition value="0"/>
           <text value="Button"/>
+        </properties>
+      </component>
+      <component id="11302" class="javax.swing.JTextField" binding="guessNo_display">
+        <constraints>
+          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="-1"/>
+          </grid>
+        </constraints>
+        <properties>
+          <background color="-2171173"/>
+          <editable value="false"/>
+          <font size="20"/>
+          <foreground color="-16053493"/>
+          <horizontalAlignment value="0"/>
+          <text value="3"/>
+        </properties>
+      </component>
+      <component id="9a0d" class="javax.swing.JButton" binding="Submit">
+        <constraints>
+          <grid row="6" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-592141"/>
+          <foreground color="-16777216"/>
+          <text value="Submit hint"/>
         </properties>
       </component>
     </children>
